--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,91 +16,91 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: flambda2_runtime5
-            config: --enable-middle-end=flambda2 --enable-runtime5
-            os: ubuntu-latest
+#          - name: flambda2_runtime5
+#            config: --enable-middle-end=flambda2 --enable-runtime5
+#            os: ubuntu-latest
 
-          - name: flambda2_debug_runtime5
-            config: --enable-middle-end=flambda2 --enable-runtime5
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            use_runtime: d
-            ocamlrunparam: "v=0,V=1"
+#          - name: flambda2_debug_runtime5
+#            config: --enable-middle-end=flambda2 --enable-runtime5
+#            os: ubuntu-latest
+#            build_ocamlparam: ''
+#            use_runtime: d
+#            ocamlrunparam: "v=0,V=1"
 
-          - name: flambda2_debug_runtime
-            config: --enable-middle-end=flambda2
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            use_runtime: d
-            ocamlrunparam: "v=0,V=1"
+#          - name: flambda2_debug_runtime
+#            config: --enable-middle-end=flambda2
+#            os: ubuntu-latest
+#            build_ocamlparam: ''
+#            use_runtime: d
+#            ocamlrunparam: "v=0,V=1"
 
-          - name: flambda2_debug_runtime_nnp
-            config: --enable-middle-end=flambda2 --disable-naked-pointers
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            use_runtime: d
-            ocamlrunparam: "v=0,V=1"
+#          - name: flambda2_debug_runtime_nnp
+#            config: --enable-middle-end=flambda2 --disable-naked-pointers
+#            os: ubuntu-latest
+#            build_ocamlparam: ''
+#            use_runtime: d
+#            ocamlrunparam: "v=0,V=1"
 
-          - name: flambda2_nnp_o3
-            config: --enable-middle-end=flambda2 --disable-naked-pointers
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            ocamlparam: '_,O3=1'
+#          - name: flambda2_nnp_o3
+#            config: --enable-middle-end=flambda2 --disable-naked-pointers
+#            os: ubuntu-latest
+#            build_ocamlparam: ''
+#            ocamlparam: '_,O3=1'
 
-          - name: flambda2_o3_advanced_meet
-            config: --enable-middle-end=flambda2
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            ocamlparam: '_,O3=1,flambda2-meet-algorithm=advanced'
+ #         - name: flambda2_o3_advanced_meet
+ #           config: --enable-middle-end=flambda2
+ #           os: ubuntu-latest
+ #           build_ocamlparam: ''
+ #           ocamlparam: '_,O3=1,flambda2-meet-algorithm=advanced'
 
-          - name: flambda2_frame_pointers_oclassic
-            config: --enable-middle-end=flambda2 --enable-frame-pointers --enable-poll-insertion
-            os: ubuntu-latest
-            build_ocamlparam: ''
-            ocamlparam: '_,Oclassic=1'
-            disable_testcases: 'ocaml/testsuite/tests/typing-local/regression_cmm_unboxing.ml ocaml/testsuite/tests/int64-unboxing/test.ml'
+#          - name: flambda2_frame_pointers_oclassic
+#            config: --enable-middle-end=flambda2 --enable-frame-pointers --enable-poll-insertion
+#            os: ubuntu-latest
+#            build_ocamlparam: ''
+#            ocamlparam: '_,Oclassic=1'
+#            disable_testcases: 'ocaml/testsuite/tests/typing-local/regression_cmm_unboxing.ml ocaml/testsuite/tests/int64-unboxing/test.ml'
 
           - name: flambda2_macos
             config: --enable-middle-end=flambda2
             os: macos-latest
 
-          - name: irc
-            config: --enable-middle-end=flambda2
-            os: ubuntu-latest
-            build_ocamlparam: '_,w=-46,regalloc=irc,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=IRC_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
-            check_arch: true
+ #         - name: irc
+ #           config: --enable-middle-end=flambda2
+ #           os: ubuntu-latest
+ #           build_ocamlparam: '_,w=-46,regalloc=irc,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=IRC_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
+ #           check_arch: true
 
-          - name: irc_frame_pointers
-            config: --enable-middle-end=flambda2 --enable-frame-pointers
-            os: ubuntu-latest
-            build_ocamlparam: '_,w=-46,regalloc=irc,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=IRC_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
-            check_arch: true
+ #         - name: irc_frame_pointers
+ #           config: --enable-middle-end=flambda2 --enable-frame-pointers
+ #           os: ubuntu-latest
+ #           build_ocamlparam: '_,w=-46,regalloc=irc,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=IRC_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
+ #           check_arch: true
 
-          - name: ls
-            config: --enable-middle-end=flambda2
-            os: ubuntu-latest
-            build_ocamlparam: '_,w=-46,regalloc=ls,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=LS_ORDER:layout,regalloc-validate=1'
-            check_arch: true
+#          - name: ls
+#            config: --enable-middle-end=flambda2
+#            os: ubuntu-latest
+#            build_ocamlparam: '_,w=-46,regalloc=ls,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=LS_ORDER:layout,regalloc-validate=1'
+#            check_arch: true
 
-          - name: gi
-            config: --enable-middle-end=flambda2
-            os: ubuntu-latest
-            build_ocamlparam: '_,w=-46,regalloc=gi,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=GI_PRIORITY_HEURISTICS:interval-length,regalloc-param=GI_SELECTION_HEURISTICS:first-available,regalloc-param=GI_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
-            check_arch: true
+#          - name: gi
+#            config: --enable-middle-end=flambda2
+#            os: ubuntu-latest
+#            build_ocamlparam: '_,w=-46,regalloc=gi,regalloc-param=SPLIT_LIVE_RANGES:on,regalloc-param=GI_PRIORITY_HEURISTICS:interval-length,regalloc-param=GI_SELECTION_HEURISTICS:first-available,regalloc-param=GI_SPILLING_HEURISTICS:flat-uses,regalloc-validate=1'
+#            check_arch: true
 
-          - name: build_upstream_closure
-            config: --enable-middle-end=upstream-closure
-            os: ubuntu-20.04
+ #         - name: build_upstream_closure
+ #           config: --enable-middle-end=upstream-closure
+ #           os: ubuntu-20.04
 
-          - name: build_upstream_closure_runtime5
-            config: --enable-middle-end=upstream-closure --enable-runtime5
-            os: ubuntu-20.04
-            expected_fail: true
+#          - name: build_upstream_closure_runtime5
+#            config: --enable-middle-end=upstream-closure --enable-runtime5
+#            os: ubuntu-20.04
+#            expected_fail: true
 
     env:
       J: "3"
       # On macOS, the testsuite is slow, so run only on push to main (#507)
-      run_testsuite: "${{matrix.os != 'macos-latest' || (github.event_name == 'push' && github.event.ref == 'refs/heads/main')}}"
+      #run_testsuite: "${{matrix.os != 'macos-latest' || (github.event_name == 'push' && github.event.ref == 'refs/heads/main')}}"
       build_upstream: "${{matrix.name == 'build_upstream_closure'}}"
       expected_fail: "${{matrix.expected_fail == true}}"
 
